# vicon

./: .gitignore  Development_Runner.sh  Dockerfile  INSTALL.md  README-web.md  README.md  VICON_Mac_Install_Guide.md  analyze_segments.py  check_code.py  combine_fasta.py  config.yaml  deployment_script.sh  docker-compose.yml  docker_file  environment.yaml  nginx.conf  process_rotavirus.py  pyproject.toml  requirements-web.txt  run_pipeline.py  separate_segments.py  setup.py  template.ipynb
bioconda-recipe/: meta.yaml
conda/: meta.yaml
configs/: config_chikv.yaml  config_chikv_wa.yaml  config_humanRota_as11.yaml  config_orov_s.yaml  config_rsva.yaml  config_rsva_0_tol.yaml  config_rsva_3_tol.yaml  config_rsva_check_validity.yaml  config_rsva_checking_old_results.yaml  config_rsva_manfred.yaml  config_rsva_manfred_3.yaml  fastapi_integration
configs/reproduce_old_res/: config_chikv.yaml  config_chikv_wa.yaml  config_orov_s.yaml  config_rsva.yaml  config_rsvb.yaml  config_zikv.yaml
notebooks/: generate_wig.ipynb  results_cleaned.ipynb  test.ipynb
notebooks/adenov/: 250407_adenov_full_new_data.ipynb  250417_adenov_full_old_data+7.ipynb  250417_adenov_full_old_data+7_just_remainings.ipynb  adenov_all.ipynb  adenov_full-Copy1.ipynb  adenov_full.ipynb
notebooks/chikv/: chikv_4023.ipynb  chikv_4023_test_mob.ipynb  chikv_wa_only.ipynb  chikv_wa_only_with_wa_ref.ipynb
notebooks/orov/: orov-L.ipynb  orov-M-713.ipynb  orov-M-NWSA_31.ipynb  (+3 more)
tests/: TEST_PROCEDURE.md  VICON_update_Guide.md
vicon/: run_pipeline.py
web_app/: __init__.py  main.py  models.py
(+27 files in other folders)
